--- a/index.html
+++ b/index.html
@@ -61,10 +61,15 @@
     </span>
 
     <!--draggable-->
+    <script type="text/javascript" src="/js/Modernizr/modernizr-custom.js"></script>
     <script type="text/javascript" src="draggable.js"></script>
     <script type="text/javascript">
-        draggable.create({ className: 'row' });
-        draggable.create({ className: 'lineItem', line: true });
+        if (Modernizr.touchevents)
+            alert("doesn't support touch devices");
+        else {
+            draggable.create({ className: 'row' });
+            draggable.create({ className: 'lineItem', line: true });
+        }
     </script>
 </body>
 </html>
