drop to same class of draggable element.
Touch device under construction

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <script type="text/javascript" src="/js/Modernizr/modernizr-custom.js"></script>
     <script type="text/javascript" src="draggable.js"></script>
     <script type="text/javascript">
-        if (Modernizr.touchevents)
+        /*if (Modernizr.touchevents)
             alert("doesn't support touch devices");
-        else {
+        else*/ {
             draggable.create({ className: 'row' });
             draggable.create({ className: 'lineItem', line: true });
         }
